[gd_scene load_steps=7 format=3 uid="uid://coed72vmmumbm"]

[ext_resource type="Script" uid="uid://3qxpqadbs5lv" path="res://assets/enemies/weapons/scripts/turret_shot.gd" id="1_t2xb0"]
[ext_resource type="Texture2D" uid="uid://b3nnriagw3kwf" path="res://assets/enemies/weapons/images/leaf_projectile.png" id="2_t2xb0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q4k42"]
atlas = ExtResource("2_t2xb0")
region = Rect2(0, 0, 125, 139)

[sub_resource type="AtlasTexture" id="AtlasTexture_12f68"]
atlas = ExtResource("2_t2xb0")
region = Rect2(125, 0, 125, 139)

[sub_resource type="AtlasTexture" id="AtlasTexture_dca5d"]
atlas = ExtResource("2_t2xb0")
region = Rect2(125, 139, 125, 139)

[sub_resource type="SpriteFrames" id="SpriteFrames_ypfpp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4k42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12f68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dca5d")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="TurretShot" type="Area2D" groups=["enemy_weapons"]]
collision_layer = 8
script = ExtResource("1_t2xb0")
punti_arma = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-15, 0)
scale = Vector2(0.41, 0.41)
sprite_frames = SubResource("SpriteFrames_ypfpp")
autoplay = "default"
frame = 2
frame_progress = 0.351711

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 0)
scale = Vector2(0.41, 0.41)
sprite_frames = SubResource("SpriteFrames_ypfpp")
autoplay = "default"
frame = 2
frame_progress = 0.351711

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-14, 20, -7, 16, -1, 12, 3, 11, 12, 18, 20, 18, 26, 14, 32, 9, 36, 1, 33, -8, 28, -13, 18, -18, 7, -16, 3, -11, -4, -14, -10, -18, -22, -17, -29, -11, -33, -4, -33, 3, -31, 11, -27, 15, -20, 18)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
